# MoxNas

./: .dockerignore  .env  .env.example  .env.local  .env.production  .gitignore  ALEX_PROJECT_COMPLETION.md  AUTO_MOUNT_INFO.md  CLIENT_DELIVERY_SUMMARY.md  CLIENT_FIXES.md  DASHBOARD_ERROR_FIXED.md  DELIVERY_READY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SETUP.md  Dockerfile  Dockerfile.optimized  ENVIRONMENT_VARIABLES_VERIFICATION.md  FILE_AVAILABILITY_REPORT.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  FRONTEND_FIXES_COMPLETE.md  FUNCTIONALITY_TEST_REPORT.md  GITHUB_REPOSITORY_SETUP.md  INSTALL.md  INSTALLATION_GUIDE.md  LICENSE  PASSWORD_INFO.md  PROJECT_PLAN.md  PROJECT_STATUS_ALEX.md  PROJECT_STRUCTURE.md  PROXMOX_LXC_DEPLOYMENT.md  PROXMOX_RESTORED.md  PROXMOX_STORAGE_INTEGRATION.md  QUICK_INSTALL.md  README.md  README_ALEX.md  README_INSTALLATION.md  README_PROXMOX.md  (+122 more)
.github/: copilot-instructions.md
app/: __init__.py  models.py  tasks.py  websocket.py
backend/: Dockerfile  check_containers.py  check_tasks.py  cookies.txt  create_proxmox_system_info.py  create_system_services.py  demo_moxnas_api.py  manage.py  requirements.txt  secure_config.py  simulate_lxc_deployment.py  start_moxnas.py  test_api_endpoints.py  test_complete_workflow.py  test_comprehensive_realtime.py  test_container_api.py  test_debug_container.py  test_django_api.py  test_django_container_api.py  test_live_connection.py  test_moxnas_api.py  test_moxnas_views.py  test_proxmox_connection.py  test_proxmox_from_container.py  test_proxmox_integration.py  (+6 more)
(+480 files in other folders)
