[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moxnas"
version = "0.1.0"
description = "TrueNAS Scale LXC Container Implementation for Proxmox VE"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["truenas", "proxmox", "lxc", "container"]
dependencies = [
    "requests>=2.31.0",
    "psutil>=5.9.5",
    "paramiko>=3.3.1",
    "aiohttp>=3.8.5",
    "typing-extensions>=4.8.0",
    "pyyaml>=6.0.1",
    "netifaces>=0.11.0",
    "pathlib>=1.0.1",
    "proxmoxer>=2.0.1",
    "python-dotenv>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "pylint>=2.17.5",
    "mypy>=1.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/moxnas"]