[tool.pylance]
extraPaths = ["backend"]

[tool.python]
pythonPath = "backend"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moxnas"
version = "1.0.0"
description = "MoxNAS - A streamlined NAS solution for LXC containers"
dependencies = [
    "django>=4.2.0",
    "djangorestframework",
    "django-cors-headers",
    "psutil",
    "requests",
]
